# workflowo

./: Cargo.toml  README.md
src/: cli.rs  lib.rs  main.rs  yaml_parser.rs
src/tasks/: error.rs  mod.rs  shell.rs  ssh.rs
src/yaml_parser/: mod.rs  render.rs
