[package]
name = "workflowo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.3.11" , features = ["derive"]}
resolve-path = "0.1.0"
rpassword = "7.2.0"
serde = { version = "1.0.167", features = ["derive"] }
serde_yaml = "0.9.22"
ssh2 = "0.9.4"
